--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -1,4 +1,14 @@
-<h1>Scenario</h1>
-Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed. 
+# Scenario or Hypothesis
+> Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed in the environment.  
 
-<h2>for this Hunt focus only on the available PowerShell _ScriptBlockText_ field and EventID 4104 </h2>
+## Hunting
+> To hunt for this focus only on the available PowerShell _ScriptBlockText_ field and EventID 4104
+
+## Tables
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_id:4104| Filter for the the powershell | 
+|winlog.event_data.ScriptBlockText:(PowerUp OR Mimikatz OR NinjaCopy OR Get-ModifiablePath OR AllChecks OR AmsiBypass OR PsUACme OR Invoke-DLLInjection OR Invoke-ReflectivePEInjection OR Invoke-Shellcode OR Get-GPPPassword OR Get-Keystrokes OR Get-TimedScreenshot OR PowerView) | Powershell framework or scripts/commands |   
+
+#2. 
