--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -42,7 +42,21 @@
 |winlog.event_data.Description:*PowerShell AND NOT (winlog.event_data.Image:*powershell.exe OR winlog.event_data.Image:*powershell_ise.exe) | This query is likely to get renamed executable that is not powershell.exe or powershell_ise.exe | 
 |winlog.event_id:400 AND HostNmae=ConsoleHost AND NOT HostApplication=*powershell.exe| Detects the renamed activity | 
 
+# Scenario 4
+> Hunt for base64-encoded PowerShell commands
+>> The attacker uses the base64-encoded Powershell command for the malicious activity.  
 
+## Hunting 
+> We'll use Sysmon event id 1, looking for command line arguments that would match those of an encoded command.
+> > The parameter that we are looking for is "-encodedcommand" but the bare minimum that PowerShell needs to be provided as arguments to a threat as an encoded command is simply "-e" OR "-ec" OR "-enc" 
+> > > Filter out for event id 1, look for all PowerShell processes (powershell.exe or PowerShell in description), and parameter that contains "-e" - final query is shown
+
+## Table
+> The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|(winlog.event_data.Description : *Powershell OR winlog.event_data.Image : *powershell.exe) AND winlog.event_data.CommandLine : *-e* OR *-ec* OR *-enc*| This foowling query used to detect encoded commands | 
 
 
 
