--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -1,5 +1,5 @@
 # Scenario 1
-* Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed in the environment.  
+* **Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed in the environment.**  
 
 ## Hunting
 * To hunt for this focus only on the available PowerShell _ScriptBlockText_ field and EventID 4104
