--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -13,8 +13,8 @@
 |winlog.event_data.ScriptBlockText:(PowerUp OR Mimikatz OR NinjaCopy OR Get-ModifiablePath OR AllChecks OR AmsiBypass OR PsUACme OR Invoke-DLLInjection OR Invoke-ReflectivePEInjection OR Invoke-Shellcode OR Get-GPPPassword OR Get-Keystrokes OR Get-TimedScreenshot OR PowerView) | Powershell framework or scripts/commands |   
 
 # Scenario 2
-* Hunt for suspicious parent process spawning PowerShell
-* Adversaries utilise the system's well-known or internal process to spawn the PowerShell to hide under the hood.  
+* **Hunt for suspicious parent process spawning PowerShell.**
+> Adversaries utilise the system's well-known or internal process to spawn the PowerShell to hide under the hood.  
 
 ## Hunting 
 * To hunt for the suspicious process, leverage Sysmon events related to the process creation (EventID 1)
@@ -27,12 +27,12 @@
 | winlog.event_data.ParentImage:(*mshta.exe OR *rundll32.exe OR *regsvr32.exe OR *services.exe OR *winword.exe OR *wmiprvse.exe OR *powerpnt.exe OR *excel.exe OR *msaccess.exe OR *mpub.exe OR *visio.exe OR *outlook.exe OR *chrome.exe OR *iexplorer.exe OR *sqlserver.exe) AND winlog.event_data.Image : *powershell.exe | This query is likely trying to find instances where PowerShell is spawned by specific parent processes |
 
 # Scenario 3
-* Hunt for renamed PowerShell.exe
-* The attacker uses this method to disguise the system functionality to execute malicious executables.  
+* **Hunt for renamed PowerShell.exe**
+> The attacker uses this method to disguise the system functionality to execute malicious executables.  
 
 ## Hunting 
 * The fact that the PowerShell executable preserves "PowerShell" in its description, regardless of the name.
-* To hunt for the "renamed" activity, look into Sysmon events related to the process creation (EventID 1)
+> To hunt for the "renamed" activity, look into Sysmon events related to the process creation (EventID 1)
 
 ## Table
 * The following ELK query detects the activity.
@@ -44,7 +44,7 @@
 
 # Scenario 4
 * Hunt for base64-encoded PowerShell commands
-* The attacker uses the base64-encoded Powershell command for the malicious activity.  
+> The attacker uses the base64-encoded Powershell command for the malicious activity.  
 
 ## Hunting 
 * We'll use Sysmon event id 1, and look for command line arguments that would match those of an encoded command.
