--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -1,5 +1,5 @@
-# Scenario 1
-* **Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed in the environment.**  
+# Scenario 1 - Offensive Frameworks and Scripts/Commands
+**Let's assume well-known PowerShell offensive Frameworks and Scripts/Commands are executed in the environment.**  
 
 ## Hunting
 * To hunt for this focus only on the available PowerShell _ScriptBlockText_ field and EventID 4104
@@ -12,8 +12,8 @@
 |winlog.event_id:4104| Filter for the the powershell | 
 |winlog.event_data.ScriptBlockText:(PowerUp OR Mimikatz OR NinjaCopy OR Get-ModifiablePath OR AllChecks OR AmsiBypass OR PsUACme OR Invoke-DLLInjection OR Invoke-ReflectivePEInjection OR Invoke-Shellcode OR Get-GPPPassword OR Get-Keystrokes OR Get-TimedScreenshot OR PowerView) | Powershell framework or scripts/commands |   
 
-# Scenario 2
-* **Hunt for suspicious parent process spawning PowerShell.**
+# Scenario 2 - Spawning
+**Hunt for suspicious parent process spawning PowerShell.**
 > Adversaries utilise the system's well-known or internal process to spawn the PowerShell to hide under the hood.  
 
 ## Hunting 
@@ -26,8 +26,8 @@
 | ----- | ----------- |
 | winlog.event_data.ParentImage:(*mshta.exe OR *rundll32.exe OR *regsvr32.exe OR *services.exe OR *winword.exe OR *wmiprvse.exe OR *powerpnt.exe OR *excel.exe OR *msaccess.exe OR *mpub.exe OR *visio.exe OR *outlook.exe OR *chrome.exe OR *iexplorer.exe OR *sqlserver.exe) AND winlog.event_data.Image : *powershell.exe | This query is likely trying to find instances where PowerShell is spawned by specific parent processes |
 
-# Scenario 3
-* **Hunt for renamed PowerShell.exe**
+# Scenario 3 - Renamed PowerShell
+**Hunt for renamed PowerShell.exe**
 > The attacker uses this method to disguise the system functionality to execute malicious executables.  
 
 ## Hunting 
@@ -42,7 +42,7 @@
 |winlog.event_data.Description:*PowerShell AND NOT (winlog.event_data.Image:*powershell.exe OR winlog.event_data.Image:*powershell_ise.exe) | This query is likely to get renamed executable that is not powershell.exe or powershell_ise.exe | 
 |winlog.event_id:400 AND HostNmae=ConsoleHost AND NOT HostApplication=*powershell.exe| Detects the renamed activity | 
 
-# Scenario 4
+# Scenario 4 - Base64-Encode
 * Hunt for base64-encoded PowerShell commands
 > The attacker uses the base64-encoded Powershell command for the malicious activity.  
 
@@ -58,15 +58,102 @@
 | ----- | ----------- |
 |(winlog.event_data.Description : *Powershell OR winlog.event_data.Image : *powershell.exe) AND winlog.event_data.CommandLine : *-e* OR *-ec* OR *-enc*| This foowling query used to detect encoded commands | 
 
+# Scenario 5 - GZIP Compression
+**Hunt for PowerShell attacks utilizing GZIP compression**  
+> The attacker uses the GZIP to compress the files. 
+
+## Hunting 
+* We'll Use Sysmon event ID 4104 (PowerShell logs) for this task.
+* Gzip archives have a magic number to identify in the logs. 
+* Search for the GZIP archives unique magic number "H4sI"   
+
+## Table
+* The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_data.ScriptBlockText:*H4sI* | This following query is used to detect GZIP compression in the logs | 
 
 
+# Scenario 6- Obfuscated using XOR
+**Hunt for obfuscated PowerShell code using XOR**  
+> The attacker uses the obfuscation code to avoid AMSI detection
 
 
+# Hunting 
+* Powershell Event ID 4104
+* XOR Usage in PowerShell involves the operator "char", "bxor" and "join"   
+
+## Table
+* The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_data.ScriptBlockText:(*bxor* AND *join*)  | This following query is used to detect obfuscated executed XOR Scripts  | 
+
+# Scenario 7 -  Assembly execution from a file 
+**Hunt for execution of an assembly from a file by PowerShell**  
+> The attacker uses the obfuscation code to avoid AMSI detection
+
+# Hunting 
+* Powershell Event ID 4104
+* To execute an assembly from a file, a function named "_Load_" together with either "_ReadAllBytes_" or "_LoadFile_" is utilised.  
+
+## Table
+* The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_data.ScriptBlockText:((*Load*) AND (*ReadAllBytes* OR *LoadFile*))| This following query is used to detect executed assembly functions |
 
 
+# Scenario 8 -  Downloading content
+**PowerShell commands downloading content**  
+> The attacker leverages PowerShell to download content from remote sources.  
+
+# Hunting 
+* Powershell Event ID 4104
+* Powershell utilises including WebClient, Download Data, DownloadFile, and DownloadStrings scripts/commands. 
+
+* Be aware that COM objects can be used to perform file download, therefore, the following query should also be incorporated in the search. 
+
+| Query | Description |
+| ----- | ----------- |
+| 0002DF01-0000-0000-C000-000000000046 | InternetExplorer.Application | 
+| F6D90F16-9C73-11D3-B32E-00C04F990BB4 | Msxml2.XMLHTTP |
+| F5078F35-C551-11D3-89B9-0000F81FE221 | Msxml2.XMLHTTP.3.0 | 
+| 88D9D96A-F192-11D4-A65F-0040963251E5 | Msxml2.XMLHTTP.6.0 |
+| AFBA6B42-5692-48EA-8141-DC517DCF0EF1 | Msxml2.ServerXmlHttp |
+| AFB40FFD-B609-40A3-9828-F88BBE11E4E3 | Msxml2.ServerXmlHttp.3.0 |
+| 88D96A0B-F192-11D4-A65F-0040963251E5 | Msxml2.ServerXmlHttp.6.0 |
+| 2087C2F4-2CEF-4953-A8AB-66779B670495 | WinHttp.WinHttpRequest.5.1 | 
+| 00023500-0000-0000-C000-000000000046 | Excel.Application |
+
+## Table
+* The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_data.ScriptBlockText:(*WebClient* OR *DownloadData* OR *DownloadFile* OR *DownloadString* OR *OpenRead* OR *WebRequest* OR *curl* OR *wget* OR *RestMethod* OR *WinHTTP* OR *InternetExplorer.Application* OR *Excel.Application* OR *Word.Application* OR *Msxml2.XMLHTTP* OR *MsXML2.ServerXML* OR *System.XML.XMLDocument* OR *BitsTransfer*) | This following query is used to detect executed download content or files by PowerShell  |
 
 
+# Scenario 9 - Obfuscated Commands
+**obfuscated PowerShell commands**  
+> The attacker leverages the obfuscation technique to bypass AMSI.  
 
+# Hunting 
+* Powershell Event ID 4104
+* multiple strings are associated with PowerShell code obfuscation. such as
+>> "char", "join", "ToInt", "ToInt16", "ToDecimal", "ToString", "Xor" etc.
+* Be aware that sometimes attackers spell words/commands in the opposite 
+
+## Table
+* The following ELK query detects the activity.
+
+| Query | Description |
+| ----- | ----------- |
+|winlog.event_data.ScriptBlockText:((*char* AND *join*) OR ((*ToInt* OR *ToInt16* OR *ToDecimal* OR *ToByte* OR *ToUnit* OR *ToSingle*) AND (*ToChar* OR *ToString* OR *String*)) OR (*ForEach* AND *Xor*))  | This following query is used to detect obfuscation commands  |
+|winlog.event_data.ScriptBlockText:(*hctac* OR *kearb* OR *dnammoc* OR *ekovn* OR *elifd* OR *rahc* OR *etirw* OR *eddih* OR *tpircs* OR *ssecorp* OR *llehsrewop* OR *esnopser* OR *daolnwod* OR *tneilcbew* OR *tneilc* OR *ptth* OR *elifotevas* OR *46esab* OR *tcejbo* OR *maerts* OR *hcaerof* OR *retupmoc*) | This following query is used to detect opposite spelled obfuscation commands |
 
 
 
