--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -137,7 +137,7 @@
 |winlog.event_data.ScriptBlockText:(*WebClient* OR *DownloadData* OR *DownloadFile* OR *DownloadString* OR *OpenRead* OR *WebRequest* OR *curl* OR *wget* OR *RestMethod* OR *WinHTTP* OR *InternetExplorer.Application* OR *Excel.Application* OR *Word.Application* OR *Msxml2.XMLHTTP* OR *MsXML2.ServerXML* OR *System.XML.XMLDocument* OR *BitsTransfer*) | This following query is used to detect executed download content or files by PowerShell  |
 
 
-# Scenario 9 - Obfuscated Commands
+# Scenario 9 - Obfuscation Commands
 **obfuscated PowerShell commands**  
 > The attacker leverages the obfuscation technique to bypass AMSI.  
 
