--- a/01. PowerShell.md
+++ b/01. PowerShell.md
@@ -56,7 +56,7 @@
 
 | Query | Description |
 | ----- | ----------- |
-|(winlog.event_data.Description : *Powershell OR winlog.event_data.Image : *powershell.exe) AND winlog.event_data.CommandLine : *-e* OR *-ec* OR *-enc*| This foowling query used to detect encoded commands | 
+|(winlog.event_data.Description : *Powershell OR winlog.event_data.Image : *powershell.exe) AND winlog.event_data.CommandLine : *-e* OR *-ec* OR *-enc*| This following query used to detect encoded commands | 
 
 # Scenario 5 - GZIP Compression
 **Hunt for PowerShell attacks utilizing GZIP compression**  
